# info

./: api.js  caffe_tier_list.md  index.html  readme.md  rendered_md.html  society_politics.md  styles.css
.github/workflows/: ci-bluesky.yml
ML/: text_models_and_reasoning.md
blsky_bot/: README.md  main.py  pyproject.toml
ensayo/: huelga_obrera.md  ia_como_aliada_del_obrero.md
markdown/: best_opensource_linux_software.md  caffe_tier_list.md  engineering.md  predictions_for_the_future.md  society_politics.md  sound_treatment.md  tesla_p40_inH110.md
markdown/ML/: other_ml.md  text_models_and_reasoning.md
markdown/Politics - Política/: cambio_climatico.md  cargadores_coche_electrico.md  co-ops.md  los_objetivos_de_la_sociedad.md  nacionalizacion_electricas.md  remigracion.md  society_politics.md
markdown/Recetas/: coca_llanda_zanahoria.md  lasagna.md  paella.md  pan.md  pan_plano.md  pasta_fresca.md  pizza.md
markdown/recetas/: coca_llanda_zanahoria.md  pan.md  pan_plano.md  pizza.md
